inserindo a pagina login com o formulario, botoes e logo do instagram

--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,13 @@ vai pegar o primeiro bloco do group*/
     width: 238px;
     text-align: center;
 }
+.instagram-login-face{
+    color: #385185;
+    padding: 8px;
+    border-radius: 4px;
+    width: 238px;
+    text-align: center;
+}
 
 
 .instagram-logout{
